GNOME Bugzilla – Bug 148330
Can't 'Make Link' to remote SFTP folder
Last modified: 2012-12-05 09:47:39 UTC
When viewing an SFTP resource, trying to select 'Make Link' or ctrl-shift-drag an item to the desktop fails with the following error: Error "Unsupported operation" while creating a link to "sftp://remotehost/some/path". Yet I can create a launcher on the desktop to open this resource just fine.
In the new Gnome 2.8, I access the 'Connect to Server' from the File menu within any filemanager dialog. I cant choose ftps, so the secure FTP does not seem to be an option. More info about sFTP: http://www.pureftpd.org/README.TLS My server does not allow normal ftp client just those what support sFTP extension. Khiraly
*** Bug 151125 has been marked as a duplicate of this bug. ***
*** Bug 146453 has been marked as a duplicate of this bug. ***
thanks for your bug, that's still an issue with nautilus 2.10
This is actually a GNOME-VFS issue. I'll investigate it.
Hrm the FTP protocol standard [1] doesn't mention symlinks. Aren't they supported officially? If so, why are they displayed by nautilus? [1] ftp://ftp.rfc-editor.org/in-notes/std/std9.txt
Eek, sorry. You were talking about SFTP, which supports symlinks. This is NOT a GNOME-VFS issue. Moving back to nautilus... .
The issue here is that the VFS doesn't support cross-scheme links. We obviously have to create them on our own using Nautilus links.
Context menu of Non-local folders (ftp,sftp,smb,etc) shows the "Make link" option when surely if you click it it will throw the "Unsupported operation" error, so we could: - Remove "Make link" option from context menu when we are in a non-local folder. EASYFIX :). - Implement the creation of links to non-local uris (ftp,sftp,smb,etc.) by just creating a .desktop file of type link. The icon of that .desktop file should be the symbolic link emblem (so integrates in appereance with normal links). These ideas were also pointed out in bug 115805 .
*** Bug 324956 has been marked as a duplicate of this bug. ***
*** Bug 502654 has been marked as a duplicate of this bug. ***
Just tried creating a link in sftp:// share in nautilus 2.30 and it seems to be working just fine. Could this be closed then?
It works only if the link is made inside the sftp share itself. We should either make it work in all cases or disable the feature if the creation of the link is requested on a local filesystem if that's not possible.
What seems to happen now is that the link gets created but the target location is wrong. If I alt+drag a file from a remote sftp share to a local folder it creates a link to a target that is a path on the remote system. It isn't really clear to me what the correct answer is. I guess either: * Don't allow links to be created to remote mounts * Use the actual mount path as the target The second option will break if the mount isn't mounted or if the mount point changes. I'd lean towards to first option.
Created attachment 223968 [details] [review] Use fuse path when creating symbolic links across filesystems Something like this may help. Having trouble testing it due to a jhbuild issue though.
Turns out that it didn't work...the problem is that g_file_get_uri() will always re-map the fuse path to the VFS uri, so we really want to get the GFile path at the last moment. I pushed a different fix now to git master.
*** Bug 557393 has been marked as a duplicate of this bug. ***
*** Bug 635864 has been marked as a duplicate of this bug. ***