file-operations: use the local (FUSE) path for remote symlinks

Instead of the path relative to the remote machine, in case the
destination of the link is native.

https://bugzilla.gnome.org/show_bug.cgi?id=148330